# AntFarm

./: .gitignore  .travis.yml  CMakeLists.txt  FEATURES.md  FEATURES.txt  ISSUES.md  ISSUES.txt  LICENSE.md  README.md  TODO.md  TODO.txt
.github/workflows/: ci.yml
android/: .gitignore  AndroidManifest.xml
android/app/: build.gradle
android/jni/: Android.mk  Application.mk
cmake/Modules/: FindJSONBOX.cmake
data-raw/Map/: battlefieldMap.xcf  nestMap.xcf
data-raw/backgrounds/: Background1.xcf  background2.xcf  background3.xcf
data-raw/entities/: Ant.xcf  AntQueen.xcf  InDoor.xcf  Larvee.xcf  OutDoor.xcf
data-raw/gui/: button.xcf
data-raw/levels/: sampleLevel.xcf
data-raw/logo/: AntFarm_logo.xcf
data-raw/tiles/: TileMap.xcf
data/config/: GUI.json  README.md  README.txt  assets.json  config.json  levels.json
doc/: Doxyfile  doxyfile.in  mainpage.dox
doc/Code/: doxyfile
doc/Other/: Good Design Document.txt
doc/UML/: AntFarm-UML.zargo
doxygen/: doxyfile
include/: Application.hpp  AssetManager.hpp  ComponentFactory.hpp  Config.hpp  EntityFactory.hpp  EntityManager.hpp  EventQueue.hpp  GameEventDispatcher.hpp  Level.hpp  Subject.hpp  SystemFactory.hpp  SystemManager.hpp  World.hpp  WorldFactory.hpp  WorldManager.hpp
include/AppStateStack/: AppStateStack.hpp
include/AppStates/: AppState.hpp  AppStates.hpp  GameState.hpp  TitleState.hpp
include/Application/: Application.hpp
include/AssetManager/: AssetManager.hpp
include/ComponentFactory/: ComponentFactory.hpp
include/ComponentSettings/: ComponentSettings.hpp
include/Components/: Component.hpp  ComponentMask.hpp  ComponentsAlias.hpp
include/Entity/: Entity.hpp  States.hpp
include/EntityFactory/: EntityFactory.hpp
include/EntityManager/: EntityManager.hpp
include/Event/: Event.hpp  EventType.hpp  EventsAlias.hpp
include/EventQueue/: EventQueue.hpp
include/GUI/: Button.hpp
include/Game/: Game.hpp
include/GameEventDispatcher/: GameEventDispatcher.hpp
include/Level/: Level.hpp
include/Observer/: Observer.hpp
include/StateStack/: StateStack.hpp
include/States/: States.hpp
include/Subject/: Subject.hpp
include/SystemFactory/: SystemFactory.hpp
include/SystemManager/: SystemManager.hpp
include/Systems/: System.hpp  collisionSystem.hpp  movementSystem.hpp  outSystem.hpp  renderSystem.hpp  spawnSystem.hpp
include/Utils/: Math.hpp  Quadtree.hpp  String.hpp  Utility.hpp  Utils.hpp  utility.hpp
include/World/: World.hpp
include/WorldFactory/: WorldFactory.hpp
include/WorldManager/: WorldManager.hpp
modules/: FindJsonBox.cmake
src/: Application.cpp  AssetManager.cpp  ComponentFactory.cpp  ComponentSettings.cpp  Config.cpp  EntityFactory.cpp  EntityManager.cpp  EventQueue.cpp  GameEventDispatcher.cpp  Level.cpp  StateStack.cpp  Subject.cpp  SystemFactory.cpp  SystemManager.cpp  World.cpp  WorldFactory.cpp  WorldManager.cpp  main.c  main.cpp
src/AppStateStack/: AppStateStack.cpp
src/AppStates/: AppState.cpp  GameOverState.cpp  GameState.cpp  HelpState.cpp  MenuState.cpp  PauseState.cpp  TitleState.cpp
src/Application/: Application.cpp
src/AssetManager/: AssetManager.cpp
src/ComponentFactory/: ComponentFactory.cpp
src/ComponentSettings/: ComponentSettings.cpp
src/Components/: Component.cpp  Component.hpp  ComponentMask.cpp  ComponentMask.hpp
src/Entity/: Entity.cpp  Entity.hpp
src/EntityFactory/: EntityFactory.cpp
src/EntityManager/: EntityManager.cpp
src/Event/: Event.cpp
src/EventQueue/: EventQueue.cpp
src/GUI/: Button.cpp
src/Game/: Game.cpp
tests/Game/: CMakeLists.txt  main.cpp
tests/Game/Components/: Component.cpp
tests/Game/Components/DestructibleComponent/: DestructibleComponent.cpp
tests/Game/Entity/: Entity.cpp
tests/Game/doxygen/: doxyfile
tests/Game/doxygen/html/: _asset_manager_8hpp_source.html  _asset_manager_test_8hpp_source.html  _component_8hpp_source.html  _component_factory_8hpp_source.html  _component_mask_8hpp_source.html  _component_settings_8hpp_source.html  _component_test_8hpp_source.html  _config_8hpp_source.html  _destructable_component_8hpp_source.html  _entity_8hpp_source.html  _entity_factory_8hpp_source.html  _entity_manager_8hpp_source.html  _entity_manager_test_8hpp_source.html  _entity_test_8hpp_source.html  _event_8hpp_source.html  _event_queue_8hpp_source.html  _event_queue_test_8hpp_source.html  _event_test_8hpp_source.html  _event_type_8hpp_source.html  _game_8hpp_source.html  _game_event_dispatcher_8hpp_source.html  _level_8hpp_source.html  _math_8hpp_source.html  _observer_8hpp_source.html  _quadtree_8hpp_source.html  _quadtree_test_8hpp_source.html  _sprite_component_8hpp_source.html  _string_8hpp_source.html  _subject_8hpp_source.html  _system_8hpp_source.html  _system_factory_8hpp_source.html  _system_manager_8hpp_source.html  _system_manager_test_8hpp_source.html  _system_test_8hpp_source.html  _utility_8hpp_source.html  _utils_8hpp_source.html  _world_8hpp_source.html  _world_factory_8hpp_source.html  _world_manager_8hpp_source.html  _world_manager_test_8hpp_source.html  (+198 more)
tests/Game/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  functions_0.js  functions_1.js  functions_10.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+14 more)
tests/Game/include/: AssetManagerTest.hpp  ComponentTest.hpp  EntityManagerTest.hpp  EntityTest.hpp  EventQueueTest.hpp  EventTest.hpp  QuadtreeTest.hpp  SystemManagerTest.hpp  SystemTest.hpp  WorldManagerTest.hpp  renderSystemTest.hpp
tests/Game/src/: AssetManagerTest.cpp  ComponentTest.cpp  EntityManagerTest.cpp  EntityTest.cpp  EventQueueTest.cpp  EventTest.cpp  QuadtreeTest.cpp  SystemManagerTest.cpp  SystemTest.cpp  WorldManagerTest.cpp  main.cpp  renderSystemTest.cpp
(+2611 files in other folders)
